--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -7,6 +7,14 @@ author_profile: true
 
 {% include base_path %}
 
-{% for post in site.teaching reversed %}
-  {% include archive-single.html %}
-{% endfor %}
+
+**Teaching Assistant, Chair of Development Economics, Goethe University**
+   * <span style="color:Black; font-size: 14px">  Development Economics 2: Households, Summer 2024, masters course </span> 
+   * <span style="color:Black; font-size: 14px">  Introductory Econometrics, Winter 2023/2024, undergraduate </span> 
+   * <span style="color:Black; font-size: 14px">  Climate Change and Developing Countries, Summer 2022, masters seminar </span> 
+
+**Teaching Assistant, Department of Economics, Georgtown**
+   * <span style="color:Black; font-size: 14px">  Principals of Microeconomics, Fall 2012 & 2013, Spring 2014, undergraduate </span> 
+   * <span style="color:Black; font-size: 14px">  Principals of Macroeconomics, Spring 2013, undergraduate </span>
+
+    
